feat(c++): Support C-mode renderer